--- a/testfiles/includes_profile.yml
+++ b/testfiles/includes_profile.yml
@@ -10,6 +10,12 @@ metadata:
 include:
   - includeMe.yml
 ---
+# Section 0 - Output the metadata
+- block:
+    name: "profile_metadata"
+    value: |
+      {{ expr "@.metadata" }}
+---
 # Section 1
 
 - id: generalInfo
