--- a/testfiles/template_profile.yml
+++ b/testfiles/template_profile.yml
@@ -11,6 +11,12 @@ metadata:
   description: This is a profile for testing purposes
 
 ---
+# Section 0 - Output the metadata
+- block:
+    name: "profile_metadata"
+    value: |
+      {{ expr "@.metadata" }}
+---
 # Section 1
 
 - id: generalInfo
