--- a/testfiles/signature_profile.yml
+++ b/testfiles/signature_profile.yml
@@ -7,6 +7,12 @@ metadata:
   version: 2.0.0
   language: en
 ---
+# Section 0 - Output the metadata
+- block:
+    name: "profile_metadata"
+    value: |
+      {{ expr "@.metadata" }}
+---
 # Section 1
 
 - id: section1
