--- a/testfiles/blocks_profile.yml
+++ b/testfiles/blocks_profile.yml
@@ -1,6 +1,6 @@
 # Example Trust Profile for testing handlebars/template rendering
 ---
-metadata:
+profile_metadata:
   name: Testing Profile
   issuer: JPEG Trust Committee
   date: 2025-06-17T22:44:49.717Z
@@ -9,7 +9,7 @@ metadata:
 
 my:Example:
   description: "This is a test example"
-  myDate: "{{ metadata.date }}"
+  myDate: "{{ profile_metadata.date }}"
   myNumber: |
     {{ expr "5*5"}}
 
@@ -21,7 +21,7 @@ expressions:
 - block:
     name: "profile_metadata"
     value: |
-      {{ expr "@.metadata" }}
+      {{ expr "@.profile_metadata" }}
 ---
 # Section 1: test blocks
 
