--- a/testfiles/no_manifests_profile.yml
+++ b/testfiles/no_manifests_profile.yml
@@ -1,6 +1,6 @@
 # Example Trust Profile for evaluating no_manifests_credential.json
 ---
-metadata:
+profile_metadata:
   name: Experimental No Manifests Profile
   issuer: JPEG Trust Committee
   date: 2023-11-02T01:03:16.443Z
@@ -11,7 +11,7 @@ metadata:
 - block:
     name: "profile_metadata"
     value: |
-      {{ expr "@.metadata" }}
+      {{ expr "@.profile_metadata" }}
 ---
 # Section 1
 
