--- a/testfiles/template_profile.yml
+++ b/testfiles/template_profile.yml
@@ -1,6 +1,6 @@
 # Example Trust Profile for testing handlebars/template rendering
 ---
-metadata:
+profile_metadata:
   name: Template Test Profile
   issuer: JPEG Trust Committee
   date: 2025-06-17T22:44:49.717Z
@@ -15,7 +15,7 @@ metadata:
 - block:
     name: "profile_metadata"
     value: |
-      {{ expr "@.metadata" }}
+      {{ expr "@.profile_metadata" }}
 ---
 # Section 1
 
