--- a/testfiles/xmp_profile.yml
+++ b/testfiles/xmp_profile.yml
@@ -1,6 +1,6 @@
 # Example Trust Profile for evaluating no_manifests_credential.json
 ---
-_metadata:
+profile_metadata:
   name: Experimental XMP GenAI Profile
   issuer: JPEG Trust Committee
   date: 2025-10-12T01:03:16.443Z
@@ -11,7 +11,7 @@ _metadata:
 - block:
     name: "profile_metadata"
     value: |
-      {{ expr "@._metadata" }}
+      {{ expr "@.profile_metadata" }}
 ---
 # Section 1
 
